2020-02-11  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/arrays-8.pk: New test
	* testsuite/poke.pkl/arrays-diag-1.pk: Likewise.
	* testsuite/poke.pkl/arrays-diag-2.pk: Likewise.
	* testsuite/poke.pkl/arrays-diag-3.pk: Likewise.

2020-02-10  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-tab.y (array_initializer): Support expressions in .[]
	constructions in array initializers.
	* src/pkl-anal.c (pkl_anal2_ps_array): New handler.
	* src/pkl-trans.c (pkl_trans2_ps_array): Moved from trans1.
	* src/pkl-typify.c (pkl_typify2_ps_ass_stmt): Moved from typify1.
	* testsuite/poke.pkl/arrays-6.pk: New test.

2020-02-08  John Darrington <john@darrington.wattle.id.au>

	* src/pk-editor.c (pk_cmd_editor): Fix memory leak.

2020-02-07  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pvm.jitter: Add comments to instruction definitions.

2020-02-07  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/ass-2.pk: New file.
	* testsuite/poke.pkl/ass-8.pk: Likewise.
	* testsuite/poke.pkl/ass-7.pk: Likewise.
	* testsuite/poke.pkl/ass-6.pk: Likewise.
	* testsuite/poke.pkl/ass-5.pk: Likewise.
	* testsuite/poke.pkl/ass-4.pk: Likewise.
	* testsuite/poke.pkl/ass-3.pk: Likewise.

2020-02-07  Jose E. Marchesi  <jemarch@gnu.org>

	* TODO (fold bconc expressions): Task done.
	(fold array subscripts): Likewise.
	(fold .<< and .>> expressions): Likewise.

2020-02-06  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-ast.h (enum pkl_ast_code): Define PKL_AST_LAST_EXP.

2020-02-06  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-ast.c (pkl_ast_lvalue_p): Fix logic to avoid assignments
	to values.
	* testsuite/poke.pkl/ass-diag-6.pk: New test.
	* testsuite/poke.pkl/ass-1.pk: Likewise
	* testsuite/poke.pkl/ass-diag-7.pk: Likewise..
	* testsuite/poke.pkl/ass-diag-8.pk: Likewise.

2020-02-06  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-fold.c (pkl_fold_ps_cond_exp): New handler.

2020-02-06  Jose E. Marchesi  <jemarch@gnu.org>
