@@ -1,6 +1,12 @@
 /* { dg-do run } */
 
+defvar x = 3;
+
 /* { dg-command { .set obase 16 } } */
 
-/* { dg-command { 1 <<. 3 } } */
+/* { dg-command { 1 <<. x } } */
 /* { dg-output "0x8" } */
+
+/* For constant folding:  */
+/* { dg-command { 1 <<. 3 } } */
+/* { dg-output "\n0x8" } */
