@@ -1,6 +1,12 @@
 /* { dg-do run } */
 
+defvar x = 1;
+
 /* { dg-command { .set obase 16 } } */
 
-/* { dg-command { 1 <<. 31 } } */
+/* { dg-command { x <<. 31 } } */
 /* { dg-output "0x80000000" } */
+
+/* For constant folding:  */
+/* { dg-command { 1 <<. 31 } } */
+/* { dg-output "\n0x80000000" } */
