@@ -1,6 +1,12 @@
 /* { dg-do run } */
 
+defvar x = 2;
+
 /* { dg-command { .set obase 10 } } */
 
-/* { dg-command { 1 <<. 33 } } */
+/* { dg-command { x <<. 33 } } */
 /* { dg-output "2" } */
+
+/* For constant folding:  */
+/* { dg-command { 1 <<. 33 } } */
+/* { dg-output "\n2" } */
