@@ -1,6 +1,12 @@
 /* { dg-do run } */
 
+defvar x = 1;
+
 /* { dg-command { .set obase 10 } } */
 
-/* { dg-command { 1 as uint<4> <<. 2 } } */
+/* { dg-command { x as uint<4> <<. 2 } } */
 /* { dg-output "4UN" } */
+
+/* For constant folding:  */
+/* { dg-command { 1 as uint<4> <<. 2 } } */
+/* { dg-output "\n4UN" } */
